--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 </head>
 <body>
   <h1>Redirecting...</h1>
-  <p>If you are not redirected, <a href="/static/">click here</a>.</p>
+  <p>If you are not redirected, <a href="https://fmkash.github.io/UV-Static/static/">click here</a>.</p>
 </body>
 </html>
