--- a/static/index.html
+++ b/static/index.html
@@ -39,12 +39,12 @@
          <a href="https://github.com/TheTIW/UV-Static" target="_blank"class="fa-brands fa-github"></a>
          <a href="https://starttiw.org" target="_blank"class="fa-solid fa-cloud"></a>
       </div>
-      <script src="uv/uv.bundle.js" defer></script>
-      <script src="uv/uv.config.js" defer></script>
-      <script src="register-sw.js" defer></script>
-      <script src="search.js" defer></script>
-      <script src="index.js" defer></script>
-      <script src="error.js" defer></script>
+      <script src="https://fmkash.github.io/UV-Static/uv/uv.bundle.js" defer></script>
+      <script src="https://fmkash.github.io/UV-Static/uv/uv.config.js" defer></script>
+      <script src="https://fmkash.github.io/UV-Static/register-sw.js" defer></script>
+      <script src="https://fmkash.github.io/UV-Static/search.js" defer></script>
+      <script src="https://fmkash.github.io/UV-Static/index.js" defer></script>
+      <script src="https://fmkash.github.io/UV-Static/error.js" defer></script>
       <div id="footer">
          <p>&copy; 2023 TIW. All rights reserved.</p>
       </div>
